# uv_agent_workspace

./: .flake8  pyproject.toml
modelfiles/: qwen3.5-small.Modelfile
modelfiles/gemma/: gemma4-26b-agent.Modelfile  gemma4-31b-agent.Modelfile  gemma4-e2b-agent.Modelfile  gemma4-e4b-agent.Modelfile
modelfiles/qwen/: qwen3.5-agent.Modelfile  qwen3.5-general.Modelfile
scripts/: watch.bat
src/uv_agent_workspace/: __init__.py  api.py  config.py  describe.py  discover.py  fetch.py  imports.py  models.py  sort.py  watch.py  web_fetch.py
