[project]
name = "uv-agent-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WIll Morris", email = "88165849+Willmo103@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "html2text>=2025.4.15",
    "ollama>=0.6.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
watch = "uv_agent_workspace.watch:main"
fetch = "uv_agent_workspace.fetch:app"
